samples/_failures_safe/1761654479_0ffa9b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3afc8627.c: In function ‘main’:
./samples/SAFE/__tmp_3afc8627.c:154:24: error: expected ‘)’ at end of input
  154 |     if (!init_file_data
      |        ~               ^
      |                        )
./samples/SAFE/__tmp_3afc8627.c:154:5: error: expected declaration or statement at end of input
  154 |     if (!init_file_data
      |     ^~
